Add: styling for list item

--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@maxim_mazurok/gapi.client.sheets": "^4.0.20220804",
+    "@types/gapi.auth2": "^0.0.57",
+    "google-auth-library": "^8.9.0",
     "googleapis": "^120.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.5",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
