--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true,
+    "types": ["gapi.auth2"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
